--- a/src/client/src/assets/variables.scss
+++ b/src/client/src/assets/variables.scss
@@ -1,8 +1,8 @@
 @use 'sass:color';
 
 // Art
-$bg-light: url(./bg3-invert.jpg);
-$bg-dark: url(./bg3.jpg);
+$bg-light: url(./bg-invert.jpg);
+$bg-dark: url(./bg.jpg);
 
 // Font
 $font-size-title: 1.3rem;
